Added cv website files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <img src="circle-cropped.png" alt="Aliyu's profile picture">
     <h1>Aliyu Nuru</h1>
-    <p><em>Founder of FXGEEKAVI8UR NETWORK</em></p>
+    <p><em>Founder and CEO of FXGEEKAVI8UR NETWORK</em></p>
     <p>I am a computer science student who has a lot of interest in web development, cyber security, machine learning and AI, and a little bit of application and game programming. I love trading, particularly forex trading. It makes me really happy and confident in myself. I also love aviation. It is my passion. Whatever I am doing today is to achieve my dream as an <em>AIRLINE PILOT.</em> </p>
      <hr>
      <h3>Education</h3>
